
Improved ZX Vision menu interface:
-Machine manufacturer list is now sorted by name (instead of some kind of mixed age and type)
-Real tape icon now is animated when playing tape
-Added actions for reinsert, rewind, ffwd real tape
-Reorganized GUI Settings and Window Settings menu: "GUI Settings" menu is now called "ZX Vision Settings", "Window Settings" menu is now called "General settings"
-Allow customize upper buttons to actions
-Added setting to pause cpu emulation on menu when multitask active
-Added Degraded ZX Desktop Fill Type
-Added button on footer to switch ZX Desktop
-Added Accessibility->GUI settings as a quick way to enable some GUI enhancements: high contrast style, hotkeys, etc
-Show in file selector when a file can be expanded
-Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
-Maximizing windows now take care of size of ZX Desktop, when setting "Open menu on ZX Desktop" is enabled
-Handle when pressing a window when menu closed
-Added item to reduce+rearrange windows
-Added some graphical meters on AY Registers, Core Statistics
-Colour palette window now shows all colours that fit in the window
-View sprite legend now adapts to size
-Added setting to disable boxes around lower and upper ZX Desktop Buttons
-Added support for accentuated characters

Improved Next emulation:
-Turbo setting: make it by default limited on NextZXOS
-ZSF snapshots include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)
-Added a splash message when changing Layer 2 modes

Improved Text Aventure Features: 
-Improved detection of Daad aventures on debugging
-Now you can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
-Now you can use a text speech script which can translate text from the game and show the translated text on ZEsarUX window

Improved Find menu: now can find several bytes and open Hexadecimal Editor on the results list