@@ -35,6 +35,14 @@ extern unsigned char char_set_retromac[];
 extern unsigned char char_set_msx[];
 extern unsigned char char_set_beos[];
 
+struct s_charset_list {
+    char nombre[32];
+    unsigned char *puntero;
+};
+
+extern struct s_charset_list charset_list[];
+extern int user_charset;
+
 #define MAX_CHARSET_GRAPHIC 147
 
 //Tamanyo de cada array para charset en menu, asi podemos saber si por error he metido mas elementos
